Estilos fav, nav

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 nav {
   display: flex;
   justify-content: space-around;
+  align-items: center;
   text-align: center;
   height: 60px;
   background-color: rgb(223, 209, 191);
