--- a/src/App.css
+++ b/src/App.css
@@ -73,3 +73,11 @@ li {
   background-color: white;
   margin-top: 30px;
 }
+#error {
+  margin-top: 150px;
+  text-align: center;
+  text-transform: uppercase;
+}
+#boton:hover {
+  color: black;
+}
